refactor: (WishList)entity & repository구현 및 코드수정