@@ -1,28 +1,29 @@
 package gift.wishlist;
 
+import gift.product.ProductService;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import java.util.Optional;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.crossstore.ChangeSetPersister.NotFoundException;
 import org.springframework.stereotype.Service;
 
 @Service
 public class WishListService {
 
-    private final WishListDao wishListDao;
+    private final WishListRepository wishListRepository;
+    private final ProductService productService;
 
     @Autowired
-    public WishListService(WishListDao wishListDao) {
-        this.wishListDao = wishListDao;
+    public WishListService(WishListRepository wishListRepository, ProductService productService) {
+        this.wishListRepository = wishListRepository;
+        this.productService = productService;
     }
-    private static final Logger logger = LoggerFactory.getLogger(WishListService.class);
 
     public List<WishListDTO> getAllWishLists() {
         try {
-            return wishListDao.findAll().stream()
+            return wishListRepository.findAll().stream()
                 .map(WishListDTO::fromWishList)
-                .collect(Collectors.toList());
+                .toList();
         }catch(Exception e){
             throw new RuntimeException("위시리스트 오류", e);
         }
@@ -30,31 +31,39 @@ public class WishListService {
 
     public List<WishListDTO> getWishListsByEmail(String email) {
         try{
-            return wishListDao.selectWishListsByEmail(email).stream()
+            return wishListRepository.findAllByEmail(email).stream()
                 .map(WishListDTO::fromWishList)
-                .collect(Collectors.toList());
+                .toList();
         }catch(Exception e){
             throw new RuntimeException("위시리스트 오류", e);
         }
     }
 
     public void addWishList(WishListDTO wishList) {
-        wishListDao.insertWishList(wishList.toWishList());
-    }
-
-    public void updateWishList(String email, String name, int num) {
-        wishListDao.updateWishList(email, name, num);
-    }
-
-    public WishList getWishListByEmailAndName(String email, String name){
-        return wishListDao.selectWishListByEmailAndName(email,name);
-    }
-
-    public boolean deleteWishList(String email, String name) {
-        if(getWishListByEmailAndName(email,name)==null){
-            return false;
+        if(wishListRepository.existsByProductId(wishList.getProductId())){
+            throw new IllegalArgumentException("위시리스트에 존재하는 상품입니다.");
         }
-        wishListDao.deleteWishList(email, name);
-        return true;
+        wishListRepository.save(wishList.toWishList());
+    }
+
+    public void updateWishList(String email, long productId, int num) throws NotFoundException {
+        WishList wishList = Optional.ofNullable(wishListRepository.findByEmail(email)).orElseThrow(
+            NotFoundException::new);
+        if(!existsByEmailAndProduct_id(email, productId)){
+            throw new IllegalArgumentException(email+"의 위시리스트에는 "+productService.getProductById(productId).getName()+" 상품이 존재하지 않습니다.");
+        }
+        wishList.update(email, productId, num);
+        wishListRepository.save(wishList);
+    }
+
+    public Boolean existsByEmailAndProduct_id(String email, long productId){
+        return wishListRepository.existsByEmailAndProductId(email,productId);
+    }
+
+    public void deleteWishList(String email, long productId) throws NotFoundException {
+        if(!existsByEmailAndProduct_id(email,productId)){
+            throw new IllegalArgumentException(email+"의 위시리스트에는 "+productService.getProductById(productId).getName()+" 상품이 존재하지 않습니다.");
+        }
+        wishListRepository.deleteByEmailAndProductId(email, productId);
     }
 }
